# fuck-github-action

./: Cargo.toml  License.md  Readme.md
.github/workflows/: rust.toml  rust.yml
projects/fuck-and-roll/: Cargo.toml  readme.md
projects/fuck-and-roll/src/: bin.rs  main.rs  walker.rs
projects/fuck-and-roll/tests/: readme.md
