[package]
name = "fuck-github-action"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Let's fuck and roll"
repository = "https://github.com/oovm/fuck-github-action"
documentation = "https://docs.rs/fuck-github-action"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
anyhow = "1.0.75"
wax = "0.6.0"
serde_yaml = "0.9.25"
toml = "0.8.2"
json5 = "0.4.1"


[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
